--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "1.0.0",
   "description": "My portfolio website for professional contact and show my work.",
   "main": "index.js",
+  "homepage": "https://cassianojr.github.io/cassianojr.com.br",
   "scripts": {
-    "sass": "node-sass -w scss/ -o dist/css/ --recursive"
+    "sass": "node-sass -w scss/ -o dist/css/ --recursive",
+    "deploy": "gh-pages -d dist"
   },
   "author": "Cassiano Medeiros Vieira Junior",
   "license": "MIT",
   "dependencies": {
+    "gh-pages": "^1.2.0",
     "i": "^0.3.6",
     "node-sass": "^4.9.2"
   }
