--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "gh-pages": "^1.2.0",
     "i": "^0.3.6",
-    "node-sass": "^4.9.2"
+    "node-sass": "^4.9.2",
+    "npm": "^6.8.0"
   }
 }
